# jett-graphics-library

./: .gitignore  CMakeLists.txt  Directory.Build.props  GraphicsLibrary.sln  LICENSE  README.md  vcpkg.json
.github/workflows/: publish-docs.yml
GraphicsLibrary/: Bitblt.cpp  CLKernel.cpp  CLKernel.h  CLProgram.cpp  CLProgram.h  CPUBitblt.cpp  CPUBitblt.h  CPUDither.cpp  CPUDither.h  CPULine.cpp  CPULine.h  CPUPolygon.cpp  CPUPolygon.h  CPUProcessor.cpp  CPUProcessor.h  Colour.cl  Colour.cl.h  Dither.cl  Dither.cl.h  Font.cpp  Font.h  GPUBitblt.cpp  GPUBitblt.h  GPUDither.cpp  GPUDither.h  GPUPolygon.cpp  GPUPolygon.h  GPUProcessor.cpp  GPUProcessor.h  GPUWorker.cpp  GPUWorker.h  GraphicsLibrary.vcxproj  GraphicsLibrary.vcxproj.filters  Image.cpp  Image.h  Line.cpp  Line.h  Linearization.cpp  Linearization.h  LinearizationCollection.cpp  (+40 more)
GraphicsTest/: GraphicsTest.vcxproj  GraphicsTest.vcxproj.filters  StdAfx.h  colour_management_tests.cpp  colour_management_tests.h  main.cpp  timer.cpp  timer.h  verify_generated_images.py
TestImages/: cmy_grey_patch_L32.tiff  cmy_grey_patch_L64.tiff  generated_assets_manifest.tsv  greyscale.tiff  greyscaleBar.tiff  greyscaleBar1.tiff  greyscaleBar2.tiff  greyscaleBar3.tiff  med_gridCMYK.tiff  page_of_a.tiff  sml_gridCMYK.tiff
TestImages/Colour/: profile_roundtrip.tiff
docs/: .gitignore  Gemfile  _config.yml  additional-features-guide.md  bitblt-algorithms.md  build-and-license-guide.md  colour-management-guide.md  image-io-guide.md  index.md  line-drawing.md  open-source-licenses.md  opencl.md  polygon-algorithms.md  text-rendering-guide.md
docs/_data/: navigation.yml
docs/_layouts/: default.html
docs/assets/: site.css
